Nmap almost done, cleaned up files

--- a/extensions.json
+++ b/extensions.json
@@ -54,5 +54,13 @@
     "preload": false,
     "startpage": false,
     "disabled": false
+  },
+  "roadmap": {
+    "template": "roadmap.html",
+    "blueprint": "roadmap.py",
+    "path": "/roadmap",
+    "preload": false,
+    "startpage": false,
+    "disabled": false
   }
 }
